# ts2025

./: .Rprofile  .gitignore  00-ETS.ipynb  00-Homework-BA.qmd  00-RNN.ipynb  00-Recommended-Literature.qmd  01-A-Introduction-Class.ipynb  01-Introduction-Class.ipynb  01-Introduction-to-R.qmd  01-Introduction.ipynb  01-Introduction.qmd  02-Descriptive-Statistics.qmd  02-Linear-Difference-Equations copy.ipynb  02-Linear-Difference-Equations-Class.ipynb  02-Linear-Difference-Equations.ipynb  03-1-Least-Squares.qmd  03-2-Least-Squares.qmd  03-3-Covariance-Correlation.qmd  03-AR.ipynb  03-Statistics-Review.ipynb  04-1-Discrete-Distributions.qmd  04-2-Continuous-Distributions.qmd  04-A-Complex-Multiplication.ipynb  04-ARMA-Class.ipynb  04-ARMA.ipynb  05-ARMA-Fitting-Class.ipynb  05-ARMA-Fitting.ipynb  05-One-Way-ANOVA.qmd  06-ARIMA-Forecasting.ipynb  06-Simulation-Ex.qmd  06-Simulation.qmd  06-Unit-Root-Tests.ipynb  07-ARIMA-Forecasting.ipynb  07-Simulation-Tests-Ex.qmd  07-Unit-Root-Tests.ipynb  08-GARCH.ipynb  09-Categorical-Variables.ipynb  10-Interaction-Effects.ipynb  11-Confidence-Intervals.ipynb  Homework.qmd  (+19 more)
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml
basics/: Complex-Numbers.ipynb
complex/: fourier.ipynb
exercise-r/: basic_r.Rmd
exercise-r/tests/: q1.R  q2.R  q3.R  q4.R  q5.R
videos/: README.md  angular_frequency.py  complex_sine_wave.py  fourier_transform.py  sine_wave_decomp.py
