[project]
name = "ts2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arch>=8.0.0",
    "dash>=3.3.0",
    "eurostatapiclient>=0.3.0",
    "jupyter>=1.1.1",
    "manim>=0.19.1",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "seaborn>=0.13.2",
    "statsforecast>=2.0.3",
    "statsmodels>=0.14.5",
    "yfinance>=0.2.66",
]
